<resources>
    <string name="app_name">Campus Ring</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="stories">Stories</string>
    <string name="post">Post</string>
    <string name="campus">Campus</string>
    <string name="misc">Misc</string>
    <string name="name">Name</string>
    <string name="time">time</string>
    <string name="_100_likes">100+ likes</string>
    <string name="search_music_travel_party">Search #music #travel #party</string>
    <string name="what_s_in_your_mind">What\'s in your mind?</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo_from_gallary">Choose photo from gallary</string>
    <string name="take_video">Take video</string>
    <string name="choose_video_from_gallary">Choose video from gallary</string>
    <string name="add_documents">Add documents</string>
    <string name="see_the_added_video">See the added Video</string>
    <string name="write_your_comment_here">Write your comment here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
