<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.webovix.campusring.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/story"
        android:name="com.webovix.campusring.ui.dashboard.DashboardFragment"
        android:label="@string/stories"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/post"
        android:name="com.webovix.campusring.ui.notifications.NotificationsFragment"
        android:label="@string/post"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/campus"
        android:name="com.webovix.campusring.ui.campus.CampusFragment"
        android:label="@string/campus"
        tools:layout="@layout/campus_fragment" />

    <fragment
        android:id="@+id/misc"
        android:name="com.webovix.campusring.ui.misc.MiscFragment"
        android:label="@string/misc"
        tools:layout="@layout/misc_fragment" />
</navigation>
