<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userimg1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="7dp"
        android:src="@drawable/forgn"/>

    <TextView
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:layout_margin="5dp"
        android:text="@string/name"
        android:textColor="#121010"
        android:layout_toRightOf="@+id/userimg1"/>

    <EditText
        android:id="@+id/editpost"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:lines="25"
        android:layout_below="@+id/userimg1"
        android:background="@drawable/stroke_box"
        android:layout_margin="4dp"
        android:hint="@string/what_s_in_your_mind"
        android:gravity="center"/>

    <TextView
        android:id="@+id/takepic"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/take_photo"
        android:textSize="22sp"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:textColor="#191818"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/camera"
        android:layout_below="@+id/editpost"/>

    <TextView
        android:id="@+id/takepicgallary"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingStart="10dp"
        android:text="@string/choose_photo_from_gallary"
        android:textSize="22sp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/chooseimg"
        android:textColor="#191818"
        android:layout_margin="5dp"
        android:layout_below="@+id/takepic"/>

    <TextView
        android:id="@+id/takevideo"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/take_video"
        android:textSize="22sp"
        android:paddingStart="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/video"
        android:textColor="#191818"
        android:layout_margin="5dp"
        android:layout_below="@+id/takepicgallary"/>

    <TextView
        android:id="@+id/takevideogallary"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/choose_video_from_gallary"
        android:textSize="22sp"
        android:textColor="#191818"
        android:layout_margin="5dp"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        android:drawableStart="@drawable/coosevideo"
        android:layout_below="@+id/takevideo"/>

            <TextView
                android:id="@+id/addattachments"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/add_documents"
                android:textSize="22sp"
                android:textColor="#191818"
                android:layout_margin="5dp"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:drawableStart="@drawable/addfiles"
                android:layout_below="@+id/takevideogallary"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>