<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/addpost"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/add"
        android:background="#EC0A0A"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/searchedittxt"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_toLeftOf="@+id/searchbtn"
        android:layout_margin="6dp"
        android:background="@drawable/stroke_box"
        android:paddingLeft="5dp"
        android:textSize="18sp"
        android:hint="@string/search_music_travel_party"/>

    <ImageView
        android:id="@+id/searchbtn"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_alignParentRight="true"
        android:layout_margin="6dp"
        android:src="@drawable/searchbtn"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/searchedittxt">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userimg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="7dp"
                android:src="@drawable/forgn"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:text="@string/name"
                android:textColor="#121010"
                android:layout_toRightOf="@+id/userimg"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_margin="2dp"
                android:layout_marginLeft="5dp"
                android:textColor="#121010"
                android:text="@string/time"
                android:layout_toRightOf="@+id/userimg"
                android:layout_below="@+id/username"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/_100_likes"
                android:layout_below="@+id/imgpost"
                android:layout_margin="10dp"
                android:textColor="#151313"
                android:textStyle="bold"
                />

        <ImageView
            android:id="@+id/imgpost"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="8dp"
            android:background="#8E8888"
            android:layout_below="@+id/userimg"
            android:src="@drawable/forgn"
            />
        <ImageView
            android:id="@+id/likebtn"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_below="@+id/imgpost"
            android:layout_toLeftOf="@+id/dislikebtn"
            android:layout_margin="10dp"
            android:src="@drawable/likebtn"/>

        <ImageView
            android:id="@+id/dislikebtn"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_toLeftOf="@+id/cmntbtn"
            android:layout_below="@+id/imgpost"
            android:layout_margin="10dp"
            android:src="@drawable/dislikebtn"/>

        <ImageView
            android:id="@+id/cmntbtn"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_below="@+id/imgpost"
            android:layout_toLeftOf="@+id/sharebtn"
            android:layout_margin="10dp"
            android:src="@drawable/btncmnt"/>

        <ImageView
            android:id="@+id/sharebtn"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_below="@+id/imgpost"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/sharebtn"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>