<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/searchedittxt">

        <RelativeLayout
            android:id="@+id/myrel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userimg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="7dp"
                android:src="@drawable/forgn"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:text="@string/name"
                android:textColor="#121010"
                android:layout_toRightOf="@+id/userimg"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_margin="2dp"
                android:layout_marginLeft="5dp"
                android:textColor="#121010"
                android:text="@string/time"
                android:layout_toRightOf="@+id/userimg"
                android:layout_below="@+id/username"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/_100_likes"
                android:layout_below="@+id/imgpost"
                android:layout_margin="10dp"
                android:textColor="#151313"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/imgpost"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:background="#8E8888"
                android:layout_below="@+id/userimg"
                android:src="@drawable/forgn"
                />
            <ImageView
                android:id="@+id/likebtn"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_below="@+id/imgpost"
                android:layout_toLeftOf="@+id/dislikebtn"
                android:layout_margin="10dp"
                android:src="@drawable/likebtn"/>

            <ImageView
                android:id="@+id/likebtnclr"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_below="@+id/imgpost"
                android:layout_toLeftOf="@+id/dislikebtn"
                android:layout_margin="10dp"
                android:visibility="invisible"
                android:saveEnabled="false"
                android:src="@drawable/likebtnclr"/>

            <ImageView
                android:id="@+id/dislikebtn"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_toLeftOf="@+id/cmntbtn"
                android:layout_below="@+id/imgpost"
                android:layout_margin="10dp"
                android:src="@drawable/dislikebtn"/>

            <ImageView
                android:id="@+id/dislikebtnclr"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_toLeftOf="@+id/cmntbtn"
                android:layout_below="@+id/imgpost"
                android:layout_margin="10dp"
                android:visibility="invisible"
                android:saveEnabled="false"
                android:src="@drawable/dislikebtnclr" />

            <ImageView
                android:id="@+id/cmntbtn"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_below="@+id/imgpost"
                android:layout_toLeftOf="@+id/sharebtn"
                android:layout_margin="10dp"
                android:src="@drawable/btncmnt"/>

            <ImageView
                android:id="@+id/sharebtn"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_below="@+id/imgpost"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/sharebtn"/>

            <EditText
                android:id="@+id/editcmnts"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/sharebtn"
                android:layout_toLeftOf="@+id/sharebtn"
                android:padding="10dp"
                android:background="@drawable/stroke_box"
                android:hint="@string/write_your_comment_here"/>

            <ImageView
                android:id="@+id/cmntsendbtn"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/cmntsendbtn"
                android:layout_below="@+id/sharebtn"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>